Explicit Intent, Explicit Intent(submit)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:text="@string/exit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:onClick="handleExit"
             />
 
 </LinearLayout>
